--- a/vignettes/Intro_to_EgoCor.Rmd
+++ b/vignettes/Intro_to_EgoCor.Rmd
@@ -21,12 +21,11 @@ library(EgoCor)
 ```
 
 This is an introduction to the package EgoCor which offers a user friendly interface displaying in one function a range of graphics and tables of parameters to facilitate the decision making about which exponential parameters fit either raw data or residuals best. This function is based on the functions of the R package gstat. A further function providing the measure of uncertainty proposed by Dyck and Sauzet has been implemented in the package.
-With the R package EgoCor modelling the spatial correlation structure of health outcome with a measure of uncertainly is made available to non specialists
+With the R package EgoCor modelling the spatial correlation structure of health outcome with a measure of uncertainly is made available to non specialists.
 
 ## Statistical background
 
 Please find more detailed information about our method [here](https://arxiv.org/abs/2202.05752)
-
 
 ## Data
 
@@ -40,6 +39,11 @@ The simulated dataset birth is provided with the package EgoCor. The dataset is 
 * bmi: BMI of the mother at first medical appointment;
 * weight: weight of the mother at first medical appointment; 
 * inc: income quintile.
+
+```{r}
+head(birth)
+```
+
 
 ## Functions
 
@@ -55,14 +59,14 @@ We use this dataset to illustrate the following functions:
 ### 1. coords.plot()
 
 The first three columns of the data frame or matrix should be ordered the following way:
-1st column: x-coordinate in meters for a Cartesian coordinate system; 2nd column: y- coordinate in meters for a Cartesian coordinate system; 3rd column: outcome of interest. Other columns will be ignored.
+1st column: x-coordinate in meters for a Cartesian coordinate system; 2nd column: y-coordinate in meters for a Cartesian coordinate system; 3rd column: outcome of interest. Other columns will be ignored.
 
-The function coords.plot() provides a simple visualization of the locations on a two dimen- sional map and indicates, whether the outcome is observed (by a black circle) or missing (by a red x) at a specific location.
+The function coords.plot() provides a simple visualization of the locations on a two dimensional map and indicates, whether the outcome is observed (by a black circle) or missing (by a red x) at a specific location.
+The purpose of this function is to look at the spatial distribution of observations and if there might be a spatial pattern in the distribution of missing values in the outcome of interest or in covariates.
 
 ```{r fig1, fig.height = 4.5, fig.width = 6, fig.align = "center"}
-coords.plot(data = birth)
+coords.plot(birth)
 ```
-The purpose of this function is to look at the spatial distribution of observations and if there might be a spatial pattern in the distribution of missing values in the outcome of interest or in covariates.
 
 ### 3. distance.info()
 
@@ -73,15 +77,13 @@ This function provides further information about the distribution of pairwise Eu
 ```{r fig2, fig.height = 4.5, fig.width = 6, fig.align = "center"}
 distance.info(birth)
 ```
+From all the 815 409 pairwise distances, 30 570 are of less than 2 000 meters and will be used for modelling of the local spatial correlation structure.
 
+### 4. vario.mod()
 
-### 4. vario.mod
+This function enables the simultaneous output of multiple exponential semi-variogram models fitted for a range of maximal distances and a number of bins. Thereby, the focus lies on the ability of the function to provide multiple estimation results depending on various specifications for the meta parameters max.dist and nbins.
 
-\code{test}
-
-The function vario.mod() enables the simultaneous output of multiple exponential semi- variogram models fitted for a range of maximal distances and a number of bins. Thereby, the focus lies on the ability of the function to provide multiple estimation results depending on various specifications for the meta parameters max.dist and nbins.
-
-When in the default setting (shinyresults = TRUE) an interactive shiny application is opened automatically that displays the results. For the purpose of this vignette though, we will set 'shinyresults = FALSE' and 'windowplots = TRUE'.
+When in the default setting (shinyresults = TRUE) an interactive shiny application is opened automatically that displays the results. For the purpose of this vignette though we will set 'shinyresults = FALSE' and 'windowplots = TRUE'.
 
 The chosen maximal distance value specifies the subset of data pairs that are actually used within the semi-variogram estimation. Only data pairs with an Euclidean distance ≤ max.dist are taken into account.
 
@@ -90,15 +92,27 @@ For a first exploration, it might be useful to try a range of maximal distances 
 ```{r fig3, fig.height = 4.5, fig.width = 6, fig.align = "center"}
 mod = vario.mod(birth, max.dist = c(1000,800,600), shinyresults = FALSE, windowplots = TRUE)
 ```
-You can get the estimated parameters later by
+You can also get the estimated parameters later by
 ```{r}
 mod$infotable
 ```
+The maximum distance of 800m seems to provide a good fit for this dataset. We can now refine the analysis by varying the number of bins.
+The nbins parameter specifies the number of lags of the empirical semi-variogram to be estimated. A high number of lags might lead to small within-lag-sample-size and thus to an unstable estimate. Simultaneously, a too small number of lags might lead to a model, that does not detect a spatial correlation structure at all.
 
-### par.uncertainty
+```{r fig4, fig.height = 4.5, fig.width = 6, fig.align = "center"}
+mod_2 = vario.mod(birth, max.dist = 800, nbins = c(11,12,13,14), 
+                  shinyresults = FALSE, windowplots = TRUE)
+```
+
+
+### par.uncertainty()
+
+This function provides the filtered bootstrap standard errors for all three exponential model parameters. As the bootstrap can take some time, it is not called by the function vario.mod() directly so that the bootstrap is not executed in all model estimated by par.uncertainty(). This is left to the choice of the user by selecting the model number in the option mod.nr, thus saving execution time.
+The main output of this function is a table with parameter estimates and standard errors for all three parameters of the estimated model chosen by specifying mod.nr.
+The user can either provide the model estimated by vario.mod() and a model number that specifies which one to use or provide the parameter estimates, the data, the maximum distance and number of bins seperately. The first option is more convenient, therefore we chose it here.
 
 ```{r, warning = FALSE}
-par.uncertainty(mod, mod.nr = 1, B = 10)
+unc = par.uncertainty(mod_2, mod.nr = 2, B = 100)
 ```
 
 
