--- a/vignettes/Intro_to_EgoCor.Rmd
+++ b/vignettes/Intro_to_EgoCor.Rmd
@@ -49,11 +49,11 @@ head(birth)
 
 We use this dataset to illustrate the following functions:
 
-1. coords.plot(): for graphical description of locations;
-2. distance.info(): for descriptive information about distances between observations;
-3. vario.reg.prep(): to model the spatial correlation structure of residuals of a regression model;
-4. vario.mod(): to fit exponential models to semi-variograms with graphical presentation;
-5. par.uncertainty(): to obtain bootstrap standard errors for the parameters of the exponential semi-variogram model.
+1. `coords.plot()`: for graphical description of locations;
+2. `distance.info()`: for descriptive information about distances between observations;
+3. `vario.mod()`: to fit exponential models to semi-variograms with graphical presentation;
+4. `vario.reg.prep()`: to model the spatial correlation structure of residuals of a regression model;
+5. `par.uncertainty()`: to obtain bootstrap standard errors for the parameters of the exponential semi-variogram model.
 
 
 ### 1. coords.plot()
@@ -61,14 +61,14 @@ We use this dataset to illustrate the following functions:
 The first three columns of the data frame or matrix should be ordered the following way:
 1st column: x-coordinate in meters for a Cartesian coordinate system; 2nd column: y-coordinate in meters for a Cartesian coordinate system; 3rd column: outcome of interest. Other columns will be ignored.
 
-The function coords.plot() provides a simple visualization of the locations on a two dimensional map and indicates, whether the outcome is observed (by a black circle) or missing (by a red x) at a specific location.
+The function `coords.plot()` provides a simple visualization of the locations on a two dimensional map and indicates, whether the outcome is observed (by a black circle) or missing (by a red x) at a specific location.
 The purpose of this function is to look at the spatial distribution of observations and if there might be a spatial pattern in the distribution of missing values in the outcome of interest or in covariates.
 
 ```{r fig1, fig.height = 4.5, fig.width = 6, fig.align = "center"}
 coords.plot(birth)
 ```
 
-### 3. distance.info()
+### 2. distance.info()
 
 This function provides further information about the distribution of pairwise Euclidean distances. It displays the following descriptive statistics:
 * a histogram of Euclidean distances;
@@ -79,11 +79,11 @@ distance.info(birth)
 ```
 From all the 815 409 pairwise distances, 30 570 are of less than 2 000 meters and will be used for modelling of the local spatial correlation structure.
 
-### 4. vario.mod()
+### 3. vario.mod()
 
 This function enables the simultaneous output of multiple exponential semi-variogram models fitted for a range of maximal distances and a number of bins. Thereby, the focus lies on the ability of the function to provide multiple estimation results depending on various specifications for the meta parameters max.dist and nbins.
 
-When in the default setting (shinyresults = TRUE) an interactive shiny application is opened automatically that displays the results. For the purpose of this vignette though we will set 'shinyresults = FALSE' and 'windowplots = TRUE'.
+When in the default setting `shinyresults = TRUE` an interactive shiny application is opened automatically that displays the results. For the purpose of this vignette though we will set `shinyresults = FALSE` and `windowplots = TRUE`.
 
 The chosen maximal distance value specifies the subset of data pairs that are actually used within the semi-variogram estimation. Only data pairs with an Euclidean distance ≤ max.dist are taken into account.
 
@@ -100,16 +100,29 @@ The maximum distance of 800m seems to provide a good fit for this dataset. We ca
 The nbins parameter specifies the number of lags of the empirical semi-variogram to be estimated. A high number of lags might lead to small within-lag-sample-size and thus to an unstable estimate. Simultaneously, a too small number of lags might lead to a model, that does not detect a spatial correlation structure at all.
 
 ```{r fig4, fig.height = 4.5, fig.width = 6, fig.align = "center"}
-mod_2 = vario.mod(birth, max.dist = 800, nbins = c(11,12,13,14), 
+mod_2 = vario.mod(birth, max.dist = 800, nbins = c(11,12,13), 
                   shinyresults = FALSE, windowplots = TRUE)
 ```
 
+### 4. vario.reg.prep()
 
-### par.uncertainty()
+To use `vario.mod()` to model the spatial correlation structure of residuals, the studentized residuals from a (hierachical) linear regression model can be extracted by `vario.reg.prep()`.
+We want to see if adjusting for some predictors of birthweight explain some or all of the spatial correlation structure seen:
 
-This function provides the filtered bootstrap standard errors for all three exponential model parameters. As the bootstrap can take some time, it is not called by the function vario.mod() directly so that the bootstrap is not executed in all model estimated by par.uncertainty(). This is left to the choice of the user by selecting the model number in the option mod.nr, thus saving execution time.
-The main output of this function is a table with parameter estimates and standard errors for all three parameters of the estimated model chosen by specifying mod.nr.
-The user can either provide the model estimated by vario.mod() and a model number that specifies which one to use or provide the parameter estimates, the data, the maximum distance and number of bins seperately. The first option is more convenient, therefore we chose it here.
+```{r fig5, fig.height = 4.5, fig.width = 6, fig.align = "center"}
+res <- lm(formula = birthweight ~ datediff + primiparous + bmi, data = birth)
+v.prep = vario.reg.prep(res, data = birth)
+models<-vario.mod(v.prep, max.dist = c(800,600), shinyresults = FALSE, windowplots = TRUE)
+```
+
+The results point towards a reduced spatial correlation structure with a maximal distance reduced to half the one obtained before adjustment and much less regularity in the empirical semi-variogram.
+
+### 5. par.uncertainty()
+
+This function provides the filtered bootstrap standard errors for all three exponential model parameters. As the bootstrap can take some time, it is not called by the function `vario.mod()` directly so that the bootstrap is not executed in all model estimated by `par.uncertainty()`. This is left to the choice of the user by selecting the model number in the option `mod.nr`, thus saving execution time.
+The main output of this function is a table with parameter estimates and standard errors for all three parameters of the estimated model chosen by specifying `mod.nr`.
+The user can either provide the model estimated by `vario.mod()` and a model number that specifies which one to use or provide the parameter estimates, the data, the maximum distance and number of bins seperately. The first option is more convenient, therefore we chose it here.
+It is recommended to use more bootstrap samples than done here.
 
 ```{r, warning = FALSE}
 unc = par.uncertainty(mod_2, mod.nr = 2, B = 100)
