correct object name

--- a/vignettes/Intro_to_EgoCor.Rmd
+++ b/vignettes/Intro_to_EgoCor.Rmd
@@ -134,7 +134,7 @@ The first option is more convenient, therefore we chose it here. The second opti
 It is recommended to use more bootstrap samples than done here.
 
 ```{r par.uncertainty, warning = FALSE}
-if(inherits(vario.mod.output,"vario.mod.output")){
+if(inherits(mod_2,"vario.mod.output")){
 unc = par.uncertainty(mod_2, mod.nr = 2, B = 100)
 unc$unc.table
 }
