ajdust url ref and regenerate pdf manual

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -75,8 +75,8 @@
   title  = {Package geoR},
   author = {Ribeiro, Paulo J. and Diggle, Peter J.},
   month  = feb,
-  year   = {2020},
-  howpublisched         = \url{https://scholar.google.com/scholar?hl=de&as_sdt=0,5&q=ribeiro  geoR 2020&btnG=},
+  year   = {2025},
+  url    = {https://mirrors.nics.utk.edu/cran/web/packages/geoR/geoR.pdf},
 }
 
 @Article{BaBi,
