correct url (original source)

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -76,7 +76,7 @@
   author = {Ribeiro, Paulo J. and Diggle, Peter J.},
   month  = feb,
   year   = {2025},
-  url    = {https://mirrors.nics.utk.edu/cran/web/packages/geoR/geoR.pdf},
+  url    = {https://CRAN.R-project.org/package=geoR/geoR.pdf},
 }
 
 @Article{BaBi,
